--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/iagodsv/my-declarate"
+  "homepage": "https://iagodsv.github.io/my-declarate/"
 }
